--- a/data/templates/mail.html
+++ b/data/templates/mail.html
@@ -200,8 +200,8 @@
                     font-family: Arial, sans-serif;
                   "
                 >
-                  Hey Future Tech Leader! 👋 Learn from senior professionals,
-                  build a standout portfolio, and launch your tech career with
+                  Hey {{ name }}! 👋 Learn from senior professionals, build a
+                  standout portfolio, and launch your tech career with
                   confidence.
                 </p>
 
