feat: Update unsubscribe link in email template for better user experience

--- a/data/templates/mail.html
+++ b/data/templates/mail.html
@@ -1963,7 +1963,9 @@
                     font-family: Arial, sans-serif;
                   "
                 >
-                  <a href="#" style="color: #64748b; text-decoration: underline"
+                  <a
+                    href="{{ unsubscribe }}"
+                    style="color: #64748b; text-decoration: underline"
                     >Unsubscribe</a
                   >
                 </p>
